@@ -2,6 +2,7 @@ package client.rapid.module.modules.movement;
 
 import client.rapid.event.events.Event;
 import client.rapid.event.events.game.EventWorldLoad;
+import client.rapid.event.events.player.EventMove;
 import client.rapid.event.events.player.EventUpdate;
 import client.rapid.module.Module;
 import client.rapid.module.ModuleInfo;
@@ -72,6 +73,14 @@ public class LongJump extends Module {
 		setTag(mode.getMode());
 
 		this.setMode();
+
+		if(e instanceof EventMove) {
+			EventMove event = (EventMove) e;
+			if(!damage.getMode().equals("None") && !damaged) {
+				event.setX(0);
+				event.setZ(0);
+			}
+		}
 
 		if(e instanceof EventUpdate && e.isPre()) {
 			if(mc.thePlayer.hurtTime != 0) {
